# pkg/huggingface/structs.go
@@ -127,3 +127,93 @@ type TextClassificationResponseLabel struct {
 	// A float that represents how likely is that the text belongs in this class.
 	Score float64 `json:"score,omitempty"`
 }
+
+type TextGenerationRequest struct {
+	// (Required) a string to be generated from
+	Inputs     string                   `json:"inputs"`
+	Parameters TextGenerationParameters `json:"parameters,omitempty"`
+	Options    Options                  `json:"options,omitempty"`
+}
+
+type TextGenerationResponse struct {
+	GeneratedText string `json:"generated_text,omitempty"`
+}
+
+type TextGenerationParameters struct {
+	// (Default: None). Integer to define the top tokens considered within the sample operation to create new text.
+	TopK *int `json:"top_k,omitempty"`
+
+	// (Default: None). Float to define the tokens that are within the sample` operation of text generation. Add
+	// tokens in the sample for more probable to least probable until the sum of the probabilities is greater
+	// than top_p.
+	TopP *float64 `json:"top_p,omitempty"`
+
+	// (Default: 1.0). Float (0.0-100.0). The temperature of the sampling operation. 1 means regular sampling,
+	// 0 means top_k=1, 100.0 is getting closer to uniform probability.
+	Temperature *float64 `json:"temperature,omitempty"`
+
+	// (Default: None). Float (0.0-100.0). The more a token is used within generation the more it is penalized
+	// to not be picked in successive generation passes.
+	RepetitionPenalty *float64 `json:"repetition_penalty,omitempty"`
+
+	// (Default: None). Int (0-250). The amount of new tokens to be generated, this does not include the input
+	// length it is a estimate of the size of generated text you want. Each new tokens slows down the request,
+	// so look for balance between response times and length of text generated.
+	MaxNewTokens *int `json:"max_new_tokens,omitempty"`
+
+	// (Default: None). Float (0-120.0). The amount of time in seconds that the query should take maximum.
+	// Network can cause some overhead so it will be a soft limit. Use that in combination with max_new_tokens
+	// for best results.
+	MaxTime *float64 `json:"max_time,omitempty"`
+
+	// (Default: True). Bool. If set to False, the return results will not contain the original query making it
+	// easier for prompting.
+	ReturnFullText *bool `json:"return_full_text,omitempty"`
+
+	// (Default: 1). Integer. The number of proposition you want to be returned.
+	NumReturnSequences *int `json:"num_return_sequences,omitempty"`
+}
+
+// Request structure for the token classification endpoint
+type TokenClassificationRequest struct {
+	// (Required) strings to be classified
+	Inputs     string                        `json:"inputs"`
+	Parameters TokenClassificationParameters `json:"parameters,omitempty"`
+	Options    Options                       `json:"options,omitempty"`
+}
+
+type TokenClassificationParameters struct {
+	// (Default: simple)
+	AggregationStrategy string `json:"aggregation_strategy,omitempty"`
+}
+
+type TokenClassificationResponseEntity struct {
+	// The type for the entity being recognized (model specific).
+	EntityGroup string `json:"entity_group,omitempty"`
+
+	// How likely the entity was recognized.
+	Score float64 `json:"score,omitempty"`
+
+	// The string that was captured
+	Word string `json:"word,omitempty"`
+
+	// The offset stringwise where the answer is located. Useful to disambiguate if Entity occurs multiple times.
+	Start int `json:"start,omitempty"`
+
+	// The offset stringwise where the answer is located. Useful to disambiguate if Entity occurs multiple times.
+	End int `json:"end,omitempty"`
+}
+
+// Request structure for the Translation endpoint
+type TranslationRequest struct {
+	// (Required) a string to be translated in the original languages
+	Inputs string `json:"inputs"`
+
+	Options Options `json:"options,omitempty"`
+}
+
+// Response structure from the Translation endpoint
+type TranslationResponse struct {
+	// The translated Input string
+	TranslationText string `json:"translation_text,omitempty"`
+}
